--- a/index.html
+++ b/index.html
@@ -1,7 +1,142 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152639461-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-152639461-1');
+        </script>
+        <meta charset="uft-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
+        <meta name="Description" content="VidCareer connects companies and candidates through online 
+        career events. 
+        Sign up to start your job search and attend events hosted by employers of your choice.">
+        <meta name="robots" content="noindex">
+        <link rel="stylesheet" href="styles.css" type="text/css">
+    </head>
+    <body>
+        <div class="header section">
+            <div class="container-1000">
+                <div class="logo">
+                    <a href="index.html"><img src="images/sybiltech-logo-smallest.jpg"></a>
+                </div>
+            </div>
+        </div>
+        <div class="nav section">
+            <div class="container-1000">
+                <div class="menu">
+                    <span class="menu-item">Events</span>
+                    <span class="menu-item">About</span>
+                    <span class="menu-item">Clients</span>
+                    <span class="menu-item">Blog</span>
+                    <span class="btn-contact">Contact</span>
+                </div>
+            </div>
+        </div>
+        <div class="hero section">
+            <div class="container-1000">
+                <h1>Sybiltech</h1>
+                <p>Taking your online business further</p>
+            </div>
+        </div>
+        <div class="services section">
+            <div class="container-1000">
+                <h2>What Do I Offer?</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-6">
+                        <h3>Free Website Review</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                    </div>
+                    <div class="col-6">
+                    <h3>Website Development</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                        lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                        Mauris vitae ultricies leo integer malesuada nunc.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clients section">
+            <div class="">
+                <h2>Portfolio</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-3">
+                        <h3>Free Website Review</h3>
+                        <img src="images/clients/Audrey-Zeitoun-Coaching.png">
+                    </div>
+                    <div class="col-3">
+                    <h3>Website Development</h3>
+                    <img src="images/clients/KYOSK.png">
+                    </div>
+                    <div class="col-3">
+                        <h3>Free Website Review</h3>
+                        <img src="images/clients/Pathways-21.png">
+                    </div>
+                    <div class="col-3">
+                    <h3>Website Development</h3>
+                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials section">
+            <div class="container-1000">
+                <h2>My Happy Clients!</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-6">
+                        <h3>Free Website Review</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                    </div>
+                    <div class="col-6">
+                        <h3>Website Development</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="certifications section">
+            <div class="container-1000">
+                <h2>Certifications</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-4">
+                        <h3>Free Website Review</h3>
+                        <img src="images/sybiltech-logo-smallest.jpg">
+                    </div>
+                    <div class="col-4">
+                    <h3>Website Development</h3>
+                    <img src="images/sybiltech-logo-smallest.jpg">
+                    </div>
+                    <div class="col-4">
+                        <h3>Free Website Review</h3>
+                        <img src="images/sybiltech-logo-smallest.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer section">
+            <div class="container-1000">
+                <div class="logo"><img src="images/sybiltech-logo-smallest.jpg">
+                    <p><a href="#">Back to top</a></p>
+            </div>
+            </div>
+        </div>
+    </body>
 </html>
