--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             gtag('js', new Date());
             gtag('config', 'UA-152639461-1');
         </script>
+        <script src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
@@ -49,6 +50,9 @@
                 <hr>
                 <div class="row">
                     <div class="col-6">
+                        <div class="center">
+                            <i class="fas fa-clipboard-check"></i
+                        ></div>
                         <h3>Free Website Review</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                             incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
@@ -56,6 +60,9 @@
                             Mauris vitae ultricies leo integer malesuada nunc.</p>
                     </div>
                     <div class="col-6">
+                        <div class="center">
+                            <i class="fas fa-code"></i>
+                        </div>
                     <h3>Website Development</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                         incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
@@ -63,50 +70,81 @@
                         Mauris vitae ultricies leo integer malesuada nunc.</p>
                     </div>
                 </div>
+                <div class="center padding-bottom">
+                    <a class="btn-primary" href="#">All Services</a>   
+                </div>
             </div>
         </div>
-        <div class="clients section">
+        <div class="clients section grey">
             <div class="">
                 <h2>Portfolio</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-3">
-                        <h3>Free Website Review</h3>
+                    <div class="col-3">                        
                         <img src="images/clients/Audrey-Zeitoun-Coaching.png">
+                        <h4>Audrey Zeitoun Coaching</h4>
                     </div>
-                    <div class="col-3">
-                    <h3>Website Development</h3>
+                    <div class="col-3">                    
                     <img src="images/clients/KYOSK.png">
+                    <h4>KYOSK</h4>
                     </div>
-                    <div class="col-3">
-                        <h3>Free Website Review</h3>
+                    <div class="col-3">                       
                         <img src="images/clients/Pathways-21.png">
+                        <h4>Pathways 21</h4>
                     </div>
-                    <div class="col-3">
-                    <h3>Website Development</h3>
+                    <div class="col-3">                    
                     <img src="images/clients/The-GDPR-Compliance-Consultancy.png">
+                    <h4>The GDPR Compliance Consultancy</h4>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="testimonials section">
+        <div class="events section">
+            <div class="container-1000">
+                <h2>NEW! How to Build a Business with Shopify 2020/21</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-6">                        
+                        <img src="images/shopify_logo_black-300x86.png">                 
+                    </div>
+                    <div class="col-6">                       
+                        <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
+                                teaching you how to start your e-commerce business using Shopify.</p>
+                        <a class="btn-cnt" href="#">View Event</a>          
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials section grey">
             <div class="container-1000">
                 <h2>My Happy Clients!</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">
-                        <h3>Free Website Review</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                        <div class="shadow-box">                            
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                                lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                                Mauris vitae ultricies leo integer malesuada nunc.</p>
+                            <div class="center">
+                                <img src="images/KYOSK_SIGNE_ACCOMPAGNEMENT_800px.png">
+                            </div>
+                            <h4>Shaheen Javid</h4>
+                            <p class="center">CEO, KYOSK</p>
+                        </div>
                     </div>
                     <div class="col-6">
-                        <h3>Website Development</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                        <div class="shadow-box">                            
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
+                                lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
+                                Mauris vitae ultricies leo integer malesuada nunc.</p>
+                            <div class="center">
+                                <img src="images/Focus-on-Learning-logo.png">
+                            </div>
+                            <h4>Freddie Ryder</h4>
+                            <p class="center">CEO, Focus on Learning</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -117,22 +155,38 @@
                 <hr>
                 <div class="row">
                     <div class="col-4">
-                        <h3>Free Website Review</h3>
-                        <img src="images/sybiltech-logo-smallest.jpg">
+                        <h4>Google Digital Garage Certified</h4>
+                        <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png">
                     </div>
                     <div class="col-4">
-                    <h3>Website Development</h3>
-                    <img src="images/sybiltech-logo-smallest.jpg">
+                    <h4>Yoast Certified</h4>
+                    <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png">
                     </div>
                     <div class="col-4">
-                        <h3>Free Website Review</h3>
-                        <img src="images/sybiltech-logo-smallest.jpg">
+                        <h4>Google Analytics</h4>
+                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
                     </div>
                 </div>
             </div>
         </div>
         <div class="footer section">
             <div class="container-1000">
+                <div class="row">
+                    <div class="col-3">
+                        <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
+                        href="https://twitter.com/Sybiltech1?ref_src=twsrc%5Etfw">Tweets by Sybiltech1</a> 
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="col-3">
+                    <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png">
+                    </div>
+                    <div class="col-3">
+                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                    </div>
+                    <div class="col-3">
+                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                    </div>
+                </div>
                 <div class="logo"><img src="images/sybiltech-logo-smallest.jpg">
                     <p><a href="#">Back to top</a></p>
             </div>
