--- a/index.html
+++ b/index.html
@@ -13,65 +13,70 @@
         <meta charset="uft-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
-        <meta name="Description" content="VidCareer connects companies and candidates through online 
-        career events. 
-        Sign up to start your job search and attend events hosted by employers of your choice.">
+        <meta name="Description" content="Sybil Mayard of Sybiltech provides website development and e-commerce 
+        services for your business. WordPress, Shopify, Wix and Squarespace. Enquire now.">
         <meta name="robots" content="noindex">
         <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
-        <div class="header section">
+        <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-smallest.jpg"></a>
+                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg"></a>
                 </div>
             </div>
         </div>
-        <div class="nav section">
+        <div class="nav">
             <div class="container-1000">
                 <div class="menu">
-                    <span class="menu-item">Events</span>
-                    <span class="menu-item">About</span>
-                    <span class="menu-item">Clients</span>
-                    <span class="menu-item">Blog</span>
-                    <span class="btn-contact">Contact</span>
+                    <ul>
+                        <li class="menu-item"><a href="/events">Events</a></li>
+                        <li class="menu-item"><a href="/about">About</a></li>
+                        <li class="menu-item"><a href="/clients">Clients</a></li>
+                        <li class="menu-item"><a href="/blog">Blog</a></li>
+                        <li class="menu-item"><a href="/contact">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="hero section">
+        <div class="hero">
             <div class="container-1000">
+                <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
-                <p>Taking your online business further</p>
+                <p>A freelance IT consultant who can help you achieve your goals.</p>
             </div>
         </div>
         <div class="services section">
             <div class="container-1000">
                 <h2>What Do I Offer?</h2>
                 <hr>
+                <p class="container-700 padding-top center">If you’re looking for help with setting up a website for the first time, or 
+                    you have an existing site that you want to optimise, I offer a service that’s 
+                    right for you:</p>
                 <div class="row">
                     <div class="col-6">
                         <div class="center">
-                            <i class="fas fa-clipboard-check"></i
-                        ></div>
+                            <i class="fas fa-clipboard-check"></i></div>
                         <h3>Free Website Review</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                            lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                            Mauris vitae ultricies leo integer malesuada nunc.</p>
+                        <p>A detailed report with feedback on the main aspects of your site's user 
+                            experience, search engine optimisation (SEO) and design. Recommended 
+                            improvements are provided.</p>
                     </div>
                     <div class="col-6">
                         <div class="center">
                             <i class="fas fa-code"></i>
                         </div>
                     <h3>Website Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                        incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                        lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                        Mauris vitae ultricies leo integer malesuada nunc.</p>
+                    <p>Bespoke website development services tailored to your needs, ranging from 
+                        one-off tasks, to regular website maintenance work, to a full website refresh.</p>
                     </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="#">All Services</a>   
+                    <a class="btn-primary" href="/services">All Services</a>   
                 </div>
             </div>
         </div>
@@ -79,6 +84,7 @@
             <div class="">
                 <h2>Portfolio</h2>
                 <hr>
+                <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
                 <div class="row">
                     <div class="col-3">                        
                         <img src="images/clients/Audrey-Zeitoun-Coaching.png">
@@ -97,6 +103,9 @@
                     <h4>The GDPR Compliance Consultancy</h4>
                     </div>
                 </div>
+                <div class="center padding-bottom">
+                    <a class="btn-primary" href="/clients">All Clients</a>   
+                </div>
             </div>
         </div>
         <div class="events section">
@@ -110,7 +119,7 @@
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
                                 teaching you how to start your e-commerce business using Shopify.</p>
-                        <a class="btn-cnt" href="#">View Event</a>          
+                        <a class="btn-cnt" href="/events">View Events</a>          
                     </div>
                 </div>
             </div>
@@ -122,10 +131,13 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="shadow-box">                            
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                                lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                                Mauris vitae ultricies leo integer malesuada nunc.</p>
+                            <p>It was a pleasure to work with Sybil to create my Shopify website. 
+                                She has excellent technical skills and is very client-oriented: she 
+                                always asked for my feedback and communicated so I had regular updates
+                                 on what was achieved and estimated timelines to manage my 
+                                 expectations. She is always looking to learn and improve and is a
+                                  hard worker. I would recommend her to anyone looking for a partner 
+                                  to nail your website!</p>
                             <div class="center">
                                 <img src="images/KYOSK_SIGNE_ACCOMPAGNEMENT_800px.png">
                             </div>
@@ -135,15 +147,50 @@
                     </div>
                     <div class="col-6">
                         <div class="shadow-box">                            
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                incididunt ut labore et dolore magna aliqua. Ac tincidunt vitae semper quis 
-                                lectus nulla at. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. 
-                                Mauris vitae ultricies leo integer malesuada nunc.</p>
+                            <p>Sybil is an outstanding, diligent and dedicated professional, who is
+                                 not only highly knowledgeable, but is also a delight to work with!
+                                  She provided my organisation with a website audit and I was simply
+                                   thrilled with the results! The audit was very clearly (and 
+                                   logically) laid out so I knew exactly what to do to rectify 
+                                   issues, especially thanks to her plain English non-technical 
+                                   explanations. I would highly recommend Sybil and her company’s 
+                                   services to anyone!</p>
                             <div class="center">
                                 <img src="images/Focus-on-Learning-logo.png">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO, Focus on Learning</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="shadow-box">                            
+                            <p>I have been working with Sybil on a range of digital 
+                                service projects. I would highly recommend her, she is highly 
+                                skilled and communicates digital service issues in a way that is 
+                                jargon-free and understandable. She has delivered all the work she 
+                                has taken on for us within the agreed timescale and within budget. 
+                                Her work is of a high quality and she is able to work both as part 
+                                of a team and on her own initiative.</p>
+                            <div class="center">
+                                <img src="images/favicon-3-150x150.png">
+                            </div>
+                            <h4>Gary Parker</h4>
+                            <p class="center">Director, Future Communities UK</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="shadow-box">                            
+                            <p>Sybil is extremely thorough and pays great attention to details she 
+                                will adapt to your specific needs. She has helped me choose a 
+                                platform for my domain name and website and is now helping me build 
+                                the actual website for my business. I will definitely recommend 
+                                Sybil to anyone wanting a high quality, personalised and reasonably 
+                                priced service. Her work is top class!</p>
+                            <div class="center">
+                                <img src="images/Audrey-Zeitoun-Coaching.png">
+                            </div>
+                            <h4>Audrey Zeitoun</h4>
+                            <p class="center">Life Transitions Coach, Audrey Zeitoun Coaching</p>
                         </div>
                     </div>
                 </div>
@@ -159,15 +206,23 @@
                         <img src="images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png">
                     </div>
                     <div class="col-4">
-                    <h4>Yoast Certified</h4>
-                    <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png">
+                    <h4>Yoast Academy Certified</h4>
+                    <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
+                        target="_blank">
+                        <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"></a>
                     </div>
                     <div class="col-4">
-                        <h4>Google Analytics</h4>
+                        <h4>Google Analytics Academy Certified</h4>
                         <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="contact section">
+                    <h3>Would You Like To Start A Project With Me?</h3>
+                    <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
+                            I look forward to hearing more about your exciting project.</p>
+                    <div class="center padding-bottom"><a class="btn-secondary" href="/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
@@ -178,19 +233,44 @@
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     <div class="col-3">
-                    <img src="images/certifications/sybil-mayard-yoast-for-beginners-certificate.png">
+                        <h4>Links</h4>
+                        <p><a href="/">Home</a></p>
+                        <p><a href="/about">About</a></p>
+                        <p><a href="/services">Services</a></p>
+                        <p><a href="/contact">Contact</a></p>
+                        <p><a href="/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
-                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                        <h4>Services</h4>
+                        <p>Shopify Sites</p>
+                        <p>WordPress Sites</p>
+                        <p>Wix Sites</p>
+                        <p>Squarespace Sites</p>
                     </div>
                     <div class="col-3">
-                        <img src="images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png">
+                        <h4>Get in Touch</h4>
+                        <p><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></p>
+                        <p>
+                            <a href="https://linkedin.com/in-sybil-m" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://facebook.com/sybiltech" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://twitter.com/sybiltech1" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://instagram.com/sybiltech1" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </p>
+                        <div><a href="https://fsb.org.uk" target="_blank">
+                            <img src="images/FSB-member-logo-JPEG-oskqhcp342146r0tfzf5r4vhsn7xi9koehpwzeg13e.jpg"></a></div>
+                        <div><a href="https://shopify.co.uk" target="_blank">
+                            <img src="images/shopify-partner-logo.jpg"></a></div>                        
                     </div>
                 </div>
                 <div class="logo"><img src="images/sybiltech-logo-smallest.jpg">
-                    <p><a href="#">Back to top</a></p>
+                    <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
         </div>
+        <div class="copyright section center"><p>Copyright &copy; 
+            <script>
+                document.write(new Date().getFullYear())
+            </script> Sybiltech | Website developed by <a href="/">Sybiltech</a></p></div>
     </body>
 </html>
